Fixed alignment and sizing issues

--- a/personalsite/styles/projects.css
+++ b/personalsite/styles/projects.css
@@ -12,6 +12,11 @@
     flex-direction: row-reverse;
 }
 
+.project-content {
+    margin: 0 20px;
+    align-self: center;
+}
+
 .carousel {
     display: flex;
     align-items: center;
@@ -19,7 +24,9 @@
 }
 
 .carousel > img {
-    max-height: 200px;
+    max-height: 350px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .carousel > button {
